--- a/package.json
+++ b/package.json
@@ -3,16 +3,29 @@
   "version": "1.0.0",
   "main": "expo/AppEntry.js",
   "scripts": {
+    "server": "json-server --watch db.json --port 3000",
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/dancing-script": "^0.2.3",
+    "@expo/metro-runtime": "~3.2.1",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
+    "@react-navigation/stack": "^6.3.29",
+    "axios": "^1.7.2",
     "expo": "~51.0.9",
+    "expo-font": "~12.0.6",
     "expo-status-bar": "~1.12.1",
+    "json-server": "^1.0.0-beta.0",
     "react": "18.2.0",
-    "react-native": "0.74.1"
+    "react-dom": "18.2.0",
+    "react-native": "0.74.1",
+    "react-native-paper": "^5.12.3",
+    "react-native-web": "~0.19.10",
+    "react-native-svg": "15.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
